# ultimate-antivirus

./: COMMIT_EDITMSG  README.md  index
AntiVirus/: CMakeLists.txt  README.md  ai_integration.md  architecture.md  database_schema.md  gui_design.md  integration_points.md  project_structure.md  requirements.md  roadmap.md  security_plan.md  tech_stack.md
AntiVirus/build_vs/: CMakeCache.txt
AntiVirus/include/common/: Logger.h
AntiVirus/include/core/: CoreAPI.h  DeceptionEngine.h  EDRModule.h  GodModeProtector.h  Monitor.h  NetworkProtector.h  QuantumEngine.h  Quarantine.h  Scanner.h  ThreatHunter.h
AntiVirus/src/: main.cpp
AntiVirus/src/common/: CMakeLists.txt
AntiVirus/src/common/logging/: Logger.cpp
AntiVirus/src/core/: CMakeLists.txt
AntiVirus/src/core/api/: CoreAPI.cpp
AntiVirus/src/core/deception/: DeceptionEngine.cpp
AntiVirus/src/core/edr/: EDRModule.cpp
AntiVirus/src/core/godmode/: GodModeProtector.cpp
AntiVirus/src/core/network/: NetworkProtector.cpp
AntiVirus/src/core/quantum/: QuantumEngine.cpp
AntiVirus/src/core/quarantine/: Quarantine.cpp
AntiVirus/src/core/scanner/: Scanner.cpp
AntiVirus/src/core/threat/: ThreatHunter.cpp
AntiVirus/src/gui/: MainWindow.xaml  MainWindow.xaml.cs
